--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <div class="section">
             <h1><span>About Me</span></h1>
-            <p> Hey there! I'm Rahul Retharekar from Maharashtra,India.Currently a student in Btech.I Like Coding in CPP,python and webD </p>
+            <p> Hey there! I'm Rahul Retharekar from Maharashtra,India.Completed my btech in Computer Science and Engineering.I Like Coding in CPP,python and webD </p>
             <p class="quote">~ Rahul </p>
         </div>
         <div class="section" id="res">
